fix quantity dropdown overlap issue

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -177,7 +177,7 @@ nav {
 
 header {
   @media (min-width: 1021px) {
-    min-height: calc(800px + 12vw);
+    min-height: calc(950px + 12vw);
   }
 }
 
